--- a/formulaire.html
+++ b/formulaire.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Formulaire</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <script src="node_modules/jquery/dist/jquery.min.js" defer></script>
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script>
         $(document).ready(function(){
             
@@ -12,7 +12,18 @@
         });
     </script>
 </head>
-<body>
+<body class="container-fluid">
+   <div class="row justify-content-center">
+       <div class="col-md-6">
+           <form method="post">
+               <div class="form-group">
+                   <label for="title">Titre</label>
+                   <input type="text" id="title" class="form-control">
+               </div>
+               <button class="btn btn-primary btn-block" type="submit">Valider</button>
+           </form>
+       </div>
+   </div>
     
 </body>
 </html>
