--- a/formulaire.html
+++ b/formulaire.html
@@ -7,7 +7,13 @@
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script>
         $(document).ready(function(){
-            
+            // Capture de l'évenement d'envoi du formulaire
+            $("#form").submit(function(event){
+                event.preventDefault();
+                // Récupération de la saisie
+                var title = $("#title").val();
+                console.log(title);
+            });
             
         });
     </script>
@@ -15,7 +21,7 @@
 <body class="container-fluid">
    <div class="row justify-content-center">
        <div class="col-md-6">
-           <form method="post">
+           <form method="post" id="form">
                <div class="form-group">
                    <label for="title">Titre</label>
                    <input type="text" id="title" class="form-control">
